Day 7 blog written
A typo correction in 4th day blog

--- a/Summer_Internship/8_6_19.md
+++ b/Summer_Internship/8_6_19.md
@@ -25,4 +25,4 @@ But I love my vim and so I decided to integrate flake8 in vim itself. And I foun
 
 I followed their instructions to properly setup and configure vim-flake8 which involved installing [vim-pathogen](https://github.com/tpope/vim-pathogen) (A runtime path and plugin manager for vim) and that completed my previously incomplete installation of [YouCompleteMe](https://github.com/Valloric/YouCompleteMe) (A code-completion engine for Vim).
 
-So it was quite a benificial thing to do. ;-)
+So it was quite a beneficial thing to do. ;-)
